# progja

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg
decks/: .gitignore
decks/themes/: default.css
docs/: stats.md
examples/: README.md
pipeline/: convert  download  generate  learn  prune  stats
progja/: __init__.py  data.py  decks.py  entities.py  kanji.py  logging.py  paths.py  sentences.py  tokenizer.py  words.py
progja/data/: entities.csv  path-level-1.csv  path-level-2.csv  path-level-3.csv  path-level-4.csv  path-level-5.csv  sentence-compositions.json  sentence-translations.csv  word-definitions-common.csv  words-common.csv
progja/data/kanji/: kanji-progressions.json  kanji.csv
progja/data/paths/: path-level-1.csv  path-level-3.csv
progja/data/sentences/: sentence-compositions.json
progja/data/words/: words-common.csv
tests/: test_decks.py  test_kanji.py  test_sentences.py  test_words.py
