[metadata]
name = progja
version = attr: progja.VERSION
description = Data and tools for those studying the Japanese language.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = japanese
license = MIT License
url = https://gitlab.com/x4ku/progja
author = Zach McAuliffe
author_email = zach.mcauliffe@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    License :: Other/Proprietary License
    Programming Language :: Python :: 3

[options]
packages = progja
include_package_data = True
install_requires =
    pandas>=1.2
    sudachipy>=0.6.2
    sudachidict_core

[options.package_data]
progja = *.(csv,json,css)

[options.exclude_package_data]
progja = deck*.csv
